# pinger

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  pinger2.pl  testPrereqs.pl
docs/: Makefile.am  Makefile.in  pinger2.1  pinger2.html
sw/: Makefile.am  Makefile.in  beacons.txt  dnsV4Cmd.pl  dnsV4Cmd.pl.default  installCron.pl  installPingerXML.pl  pinger.xml.default  pinger.xsd  pinger2.pl
