AC_INIT(pinger, 2.0.1)
AM_INIT_AUTOMAKE
AC_PATH_PROGS(BASH, bash, "NOT_SUPPORTED")
AC_PATH_PROGS(PERL, perl, "NOT_SUPPORTED")
AC_PATH_PROGS(PINGV4, ping, "NOT_SUPPORTED")
AC_PATH_PROGS(PINGV6, ping6, "NOT_SUPPORTED")
AC_PATH_PROGS(DIG, dig, "NOT_SUPPORTED")
AC_PATH_PROGS(LYNX, lynx, "NOT_SUPPORTED")
AC_PATH_PROGS(MAIL, mail, "NOT_SUPPORTED")
AC_OUTPUT(Makefile	\
	sw/Makefile	\
	docs/Makefile
)
